コード整理

--- a/VK/VK/meson.build
+++ b/VK/VK/meson.build
@@ -1,6 +1,8 @@
 project('Glfw', 'cpp',
   version : '0.1',
-  default_options : ['warning_level=3', 'cpp_std=c++20', 'default_library=static'])
+  default_options : ['warning_level=3', 'cpp_std=c++20', 'default_library=static']
+  #default_options : ['warning_level=3', 'cpp_std=c++20', 'default_library=shared']
+  )
 
 # setup の引数として指定する
 GLM = get_option('GLM')
@@ -19,9 +21,11 @@ Lib = [
 # OS によるライブラリ名の違い
 LIBPRE = 'lib'
 LIBSUF = 'a'
+#LIBSUF = 'so'
 if host_machine.system() == 'windows'
        LIBPRE = ''
        LIBSUF = 'lib'
+       #LIBSUF = 'dll'
 endif
 
 library('VK',
@@ -29,4 +33,5 @@ library('VK',
            install : true,
            include_directories : Inc,
            dependencies : Lib,
-           name_prefix : LIBPRE, name_suffix : LIBSUF)
+           name_prefix : LIBPRE, name_suffix : LIBSUF
+           )
