--- a/Glfw/Glfw/meson_options.txt
+++ b/Glfw/Glfw/meson_options.txt
@@ -1,2 +1,4 @@
 option('GLFW', type : 'string', value : '', description : 'GLFW SDK')
 option('GLM', type : 'string', value : '', description : 'GLM SDK')
+option('GLI', type : 'string', value : '', description : 'GLI SDK')
+
