--- a/VK/VK/VK.vcxproj.filters
+++ b/VK/VK/VK.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClInclude Include="VK.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="GLI.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="VK.cpp">
