--- a/VK/VK/VK.vcxproj
+++ b/VK/VK/VK.vcxproj
@@ -148,6 +148,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="framework.h" />
+    <ClInclude Include="GLI.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="VK.h" />
   </ItemGroup>
