--- a/VK/VK/meson_options.txt
+++ b/VK/VK/meson_options.txt
@@ -1,2 +1,3 @@
 option('GLM', type : 'string', value : '', description : 'GLM SDK')
 option('GLI', type : 'string', value : '', description : 'GLI SDK')
+option('CV', type : 'string', value : '', description : 'CV SDK')
