--- a/Glfw/Glfw/meson_options.txt
+++ b/Glfw/Glfw/meson_options.txt
@@ -1,4 +1,5 @@
 option('GLFW', type : 'string', value : '', description : 'GLFW SDK')
 option('GLM', type : 'string', value : '', description : 'GLM SDK')
 option('GLI', type : 'string', value : '', description : 'GLI SDK')
+option('CV', type : 'string', value : '', description : 'CV SDK')
 
