--- a/VK/VK/VK.vcxproj
+++ b/VK/VK/VK.vcxproj
@@ -68,7 +68,7 @@
     <Import Project="..\..\Props\VK.props" />
     <Import Project="..\..\Props\GLM.props" />
     <Import Project="..\..\Props\GLI.props" />
-    <Import Project="..\..\Props\CVDebug.props" />
+    <Import Project="..\..\Props\CV.props" />
   </ImportGroup>
   <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
