--- a/Glfw/LookingGlass/LookingGlass.vcxproj
+++ b/Glfw/LookingGlass/LookingGlass.vcxproj
@@ -70,7 +70,7 @@
     <Import Project="..\..\Props\GLM.props" />
     <Import Project="..\..\Props\GLI.props" />
     <Import Project="..\..\Props\GLFW.props" />
-    <Import Project="..\..\Props\CVDebug.props" />
+    <Import Project="..\..\Props\CV.props" />
   </ImportGroup>
   <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
