--- a/Glfw/Glfw/Glfw.vcxproj
+++ b/Glfw/Glfw/Glfw.vcxproj
@@ -71,6 +71,7 @@
     <Import Project="..\..\Props\GLM.props" />
     <Import Project="..\..\Props\GLI.props" />
     <Import Project="..\..\Props\CV.props" />
+    <Import Project="..\..\Props\HAILORT.props" />
   </ImportGroup>
   <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
