--- a/VK/VK/VK.vcxproj
+++ b/VK/VK/VK.vcxproj
@@ -69,6 +69,7 @@
     <Import Project="..\..\Props\GLM.props" />
     <Import Project="..\..\Props\GLI.props" />
     <Import Project="..\..\Props\CV.props" />
+    <Import Project="..\..\Props\HAILORT.props" />
   </ImportGroup>
   <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
@@ -76,6 +77,7 @@
     <Import Project="..\..\Props\GLM.props" />
     <Import Project="..\..\Props\GLI.props" />
     <Import Project="..\..\Props\CV.props" />
+    <Import Project="..\..\Props\HAILORT.props" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
@@ -152,6 +154,7 @@
     <ClInclude Include="CV.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="GLI.h" />
+    <ClInclude Include="Hailo.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="VK.h" />
   </ItemGroup>
