--- a/Glfw/LookingGlass/meson_options.txt
+++ b/Glfw/LookingGlass/meson_options.txt
@@ -2,4 +2,5 @@ option('GLFW', type : 'string', value : '', description : 'GLFW SDK')
 option('GLM', type : 'string', value : '', description : 'GLM SDK')
 option('GLI', type : 'string', value : '', description : 'GLI SDK')
 option('CV', type : 'string', value : '', description : 'CV SDK')
+option('HAILO', type : 'string', value : '', description : 'HAILO SDK')
 
