--- a/VK/VK/meson.build
+++ b/VK/VK/meson.build
@@ -13,6 +13,7 @@ Inc = [
 ]
 if IsWin
         Inc += include_directories(get_option('CV') / 'include')
+        Inc += include_directories(get_option('HAILO') / 'include')
 endif
 
 # 追加のライブラリ
@@ -26,6 +27,7 @@ if IsWin
         else
                 Lib += Compiler.find_library('opencv_world4100', dirs : get_option('CV') / 'x64' / 'vc17' / 'lib')
         endif
+        Lib += Compiler.find_library('libhailort', dirs : get_option('HAILO') / 'lib')
 else
         Lib += dependency('opencv4')
         Lib += Compiler.find_library('hailort', dirs : '/usr/lib')
